# DisasterReliefData

./: README.md  pyproject.toml
data/: country_list.json  disaster_types.json
src/: monitor.py  reliefweb_with_params.py  request_data_classes.py  static_qna_langchain.py  static_qna_llamaindex.py  utils.py
