[tool.poetry]
name = "disasterrelief"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.2"
geocoder = "^1.38.1"
ruamel-yaml = "^0.18.5"
llama-index = "^0.9.16.post1"
pypdf = "^3.17.3"
langchain = "^0.0.351"
chromadb = "^0.4.20"
pysqlite3 = "^0.5.2"
faiss-cpu = "^1.7.4"
bs4 = "^0.0.1"
gdacs-api = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
